--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "d3": "^5.9.1",
+    "d3-ellipse-force": "^0.1.1",
     "d3-scale-chromatic": "^1.3.3",
     "lit-element": "^2.0.1"
   },
