--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "esModuleInterop": true,
     "experimentalDecorators": true
   },
-  "include": ["src"],
+  "include": ["src", "types"],
   "exclude": ["node_modules"]
 }
