--- a/.babelrc
+++ b/.babelrc
@@ -4,10 +4,15 @@
     [
       "@babel/preset-env",
       {
-        "targets": "last 2 Chrome version",
-        "modules": false
+        "targets": {
+          "browsers": ["ie < 8"]
+        },
+        "useBuiltIns": "usage"
       }
     ]
   ],
-  "plugins": [["@babel/plugin-proposal-class-properties", { "loose": true }]]
+  "plugins": [
+    "@babel/plugin-transform-runtime",
+    ["@babel/plugin-proposal-class-properties", { "loose": true }]
+  ]
 }
