--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "license": "MIT",
   "scripts": {
     "start": "rollup -cw | browser-sync start --server --index='./public/index.html' --files='./dist/*.js,./public/*.html'",
-    "build": "rollup -c"
+    "compile": "rollup -c",
+    "transpile": "babel dist -d build",
+    "bundle": "browserify ./build/go-annotext-graph.js -o ./build/bundle.js",
+    "build": "npm run compile && npm run transpile && npm run bundle"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
     "d3": "^5.9.1",
     "d3-ellipse-force": "^0.1.1",
     "d3-scale-chromatic": "^1.3.3",
@@ -19,6 +24,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.1.0",
     "@types/d3-drag": "^1.2.2",
@@ -27,9 +33,13 @@
     "@types/d3-selection": "^1.4.0",
     "@webcomponents/webcomponentsjs": "^2.2.7",
     "browser-sync": "^2.26.3",
+    "browserify": "^16.2.3",
     "rollup": "^1.1.2",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^4.0.0"
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "tslib": "^1.9.3",
+    "typescript": "^3.4.3"
   }
 }
